modification de la page panier

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ footer
 {
     font-size: 25px;
     text-transform: uppercase;
+    margin-top: 100px;
     text-align: right;
     padding-bottom: 0px;
     width: 100%;
