--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ h3
     text-align: center;
     font-size: 30px;
 }
+p
+{
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+}
 footer
 {
     font-size: 25px;
