ajout de localstorage pour stocker les articles

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,11 @@ input
     margin: 10px;
     text-align: center;
 }
+.main{
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+}
 @media screen and (max-width: 480px){
     body{
         width: auto;
