--- a/css/style.css
+++ b/css/style.css
@@ -56,14 +56,19 @@ footer
     margin-right: 20px;
 }
 #image{
-    margin-left: 0px;
+    margin-left: 200px;
     margin-top: 50px;
     width: 30%;
-    height: 30%;
+    height: 60%;
+}
+.info > p{
+    margin-right: 150px;
+    font-size: 16px;
+    display: inline-block;
 }
 img:not(.logo){
     width: 50%;
-    height: 350px;;
+    height: 350px;
     border-radius: 30px;
     margin-left: 25%;
 }
@@ -83,13 +88,19 @@ input
     text-align: center;
 }
 .main{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+#principal{
     text-align: center;
     font-size: 22px;
-    font-weight: bold;
+    height: 200px;
 }
 @media screen and (max-width: 480px){
     body{
         width: auto;
+        height: auto;
     }
     .logo{
         width: 150px;
@@ -100,6 +111,8 @@ input
         flex-direction: row;
         justify-content: space-between;
         width: 175%;
+        margin-bottom: 80px;
+        padding-bottom: 50px;
     }
     .menu{
         margin: 0px 0px 0px 0px;
@@ -115,8 +128,27 @@ input
     }
     footer{
         width: 175%;
+        height: 300px;
     }
     form{
+        margin-top: 100px;
         margin-left: 75%;
+    }
+    #image{
+        width: 80%;
+        height: 60%;
+        margin-left: 60px;
+        margin-right: 100px;
+    }
+    .info > p{
+        margin-left: 100px;
+        margin-right: -150px;
+    }
+    h1{
+        font-size: 20px;
+    }
+    h2{
+        font-size: 15px;
+        margin-top: 40px;
     }
 }
